# C-Unix-CGI-Utils

./: README.md
Assignment-1/: CMakeLists.txt  bad.c  badtime.c  convert_comments.c  convert_comments1.c  counter.c  empties.c  hello6.c  rmtags.c  sched1.txt  semi2tab2.c  uniqc.c
Assignment-2/: CMakeLists.txt  tt2ht1.c  tt2ht2.c  wow.c  wtf.c
